--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,14 @@ local.properties
  
 # Gradle generated files
 .gradle/
+
+app/*.apk
  
 # Signing files
-.signing/
+.singing
  
 # User-specific configurations
+.idea
 .idea/libraries/
 .idea/workspace.xml
 .idea/tasks.xml
