--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath 'com.android.tools.build:gradle:2.2.0-alpha6'
     }
 }
-
 allprojects {
     repositories {
         jcenter()
