--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion '22.0.1'
+    buildToolsVersion '25.0.0'
     defaultConfig {
         applicationId 'br.org.ftsl'
         minSdkVersion 14
@@ -69,4 +69,6 @@ dependencies {
     compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.3.2'
     compile 'com.j256.ormlite:ormlite-android:4.48'
+    compile group: 'com.caverock', name: 'androidsvg', version: '1.2.1'
+
 }
